Finally fix goddamn sliders (but clipping is still broken)